@@ -67,7 +67,7 @@ def main():
     # Set up logging to a file
     root_logger.setLevel(logging.DEBUG)
     file_handler = logging.handlers.RotatingFileHandler(
-        os.path.expandvars(os.path.join('$WORKON_HOME', 'hook.log')),
+        os.path.expandvars(os.path.join('$VIRTUALENVWRAPPER_LOG_DIR', 'hook.log')),
         maxBytes=10240,
         backupCount=1,
         )
